# Wav2FacialTimeline

./: pyproject.toml  requirements.txt  requirements_colab.txt
configs/: model_2024-11-10.yaml  model_2024-11-13.yaml  model_2024-11-17.yaml
scripts/: check_audio_exists.bat  plot.py
src/: dataset.py  inference.py  model.py  preprocess.py  train.py  utils.py
src/speech_to_expression/: config.py  dataset.py  inference.py  model.py  preprocess.py  train.py  utils.py
src/speech_to_expression/model/: GaussianDiffusion.py  LongTermTemporalModule.py  NoiseDecoder.py  PositionalEncoding.py  ShortTermTemporalModule.py  SpeechToExpressionModel.py
